# api_service/docs/swagger.json
@@ -296,12 +296,6 @@
                         "schema": {
                             "$ref": "#/definitions/http.ErrorAuthResponse"
                         }
-                    },
-                    "401": {
-                        "description": "Unauthorized",
-                        "schema": {
-                            "$ref": "#/definitions/http.ErrorAuthResponse"
-                        }
                     }
                 }
             }
